--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -15,6 +15,13 @@ p {
 h1, h3 {
   text-align: center; }
 
+.nav-bar {
+  background: rgba(0, 0, 0, 0.9);
+  width: 80%;
+  position: fixed;
+  z-index: 100;
+  margin: 0 auto; }
+
 nav {
   float: left;
   /* Desplazamos el nav hacia la izquierda */ }
