--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -24,7 +24,7 @@ h1, h3 {
 .nav-bar {
   background: rgba(0,0,0,0.9);
   width: 80%;
-  position: fixed;
+  // position: fixed;
   z-index: 100;
   margin: 0 auto;
 }
