ADD button register and css initial style

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,8 +1,7 @@
 .login {
-  width: 60%;
-  background-color: #fabada;
   margin: 0 auto; }
 
 .login-form {
-  width: 100%;
-  margin: 0 auto; }
+  background-color: blueviolet;
+  margin: 20%
+}
