--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -8,14 +8,15 @@ body {
 h1 {
   text-align: center; }
 
-.landing-buttons button {
+/* .landing-buttons button { */
+  .landing-buttons a{
   margin: 0 auto;
   background-color: #074085;
   border: 0;
   border-radius: 100px !important;
   box-shadow: 0 7px 16px 0 rgba(0, 0, 0, 0.2);
   color: #fff;
-  cursor: pointer;
+  /* cursor: pointer; */
   font-size: 1rem;
   padding: 22px 36px 20px;
   font-weight: 700;
@@ -25,9 +26,9 @@ h1 {
   text-decoration: none;
   text-transform: uppercase;
   white-space: normal;
-  width: 30%;
-  margin-bottom: 40px;
-  margin-top: 40px; }
+  margin: 50px;
+  width: 200px;
+}
 
 div.w-33 {
   width: 33.33%; }
