--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,7 +1,8 @@
 .login {
+  width: 60%;
+  background-color: #FFFFFF;
   margin: 0 auto; }
 
 .login-form {
-  background-color: blueviolet;
-  margin: 20%
-}
+  width: 100%;
+  margin: 0 auto; }
