--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -8,15 +8,14 @@ body {
 h1 {
   text-align: center; }
 
-/* .landing-buttons button { */
-  .landing-buttons a{
+.landing-buttons button {
   margin: 0 auto;
   background-color: #074085;
   border: 0;
   border-radius: 100px !important;
   box-shadow: 0 7px 16px 0 rgba(0, 0, 0, 0.2);
   color: #fff;
-  /* cursor: pointer; */
+  cursor: pointer;
   font-size: 1rem;
   padding: 22px 36px 20px;
   font-weight: 700;
@@ -26,9 +25,9 @@ h1 {
   text-decoration: none;
   text-transform: uppercase;
   white-space: normal;
-  margin: 50px;
-  width: 200px;
-}
+  width: 30%;
+  margin-bottom: 40px;
+  margin-top: 40px; }
 
 div.w-33 {
   width: 33.33%; }
@@ -53,7 +52,7 @@ table {
   border-spacing: 0;
   border: 2px solid #074085;
   width: 100%;
-  margin: 50px auto;
+  margin: 0 auto;
   border-radius: .25rem;
   text-align: center; }
 
@@ -89,7 +88,7 @@ tbody td {
   border-bottom: 1px solid #ddd; }
 
 td:last-child {
-  text-align: right;
+  text-align: center;
   padding-right: 10px; }
 
 .button {
