add form add job style

--- a/src/css/FormAddJob.scss
+++ b/src/css/FormAddJob.scss
@@ -5,7 +5,7 @@ form{
 	padding:16px;
 	border-radius:10px;
 	margin:auto;
-  background-color:#ccc;
+  background-color:#F8F9F9;
   
 }
 
@@ -31,15 +31,16 @@ form input[type="submit"]{
 	width:100%;
 	padding:8px 16px;
 	margin-top:32px;
-	border:1px solid #000;
+	border:1px solid #00B4FE;
 	border-radius:5px;
 	display:block;
 	color:#fff;
-	background-color:#000;
+	background-color:#00B4FE;
 } 
 
 form input[type="submit"]:hover{
-	cursor:pointer;
+  cursor:pointer;
+  background-color: white;
 }
 
 textarea{
