--- a/src/css/FormAddJob.css
+++ b/src/css/FormAddJob.css
@@ -6,7 +6,7 @@ form {
   padding: 16px;
   border-radius: 10px;
   margin: auto;
-  background-color: #ccc; }
+  background-color: #F8F9F9; }
 
 form label {
   width: 10%;
@@ -28,14 +28,15 @@ form input[type="submit"] {
   width: 100%;
   padding: 8px 16px;
   margin-top: 32px;
-  border: 1px solid #000;
+  border: 1px solid #00B4FE;
   border-radius: 5px;
   display: block;
   color: #fff;
-  background-color: #000; }
+  background-color: #00B4FE; }
 
 form input[type="submit"]:hover {
-  cursor: pointer; }
+  cursor: pointer;
+  background-color: white; }
 
 textarea {
   width: 100%;
