add style button

--- a/src/css/JobCard.scss
+++ b/src/css/JobCard.scss
@@ -31,6 +31,10 @@ a:hover {
   color: #00B4FE;
 }
 
+a:visited {
+  color: #5F5F5F;
+}
+
 .card-job{
   width: 85%;
   margin: 0 auto;
@@ -48,6 +52,7 @@ a:hover {
 .card-content {
   flex: 1 3 auto;
 }
+
 .card-content p{
   text-align: justify;
 }
