--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,49 +1,71 @@
-/*Eliminamos los margenes y paddings que agrega el navegador por defecto*/
 * {
-  padding: 0;
-  margin: 0; }
+  box-sizing: border-box; }
 
-/*Agregamos margenes inferiores a los parrafos*/
-p {
-  margin-bottom: 20px; }
+body {
+  margin: 0auto;
+  font-family: Arial, Helvetica, sans-serif; }
 
-.wrapper {
-  width: 80%;
-  margin: auto;
-  overflow: hidden; }
-
-h1, h3 {
-  text-align: center; }
-
-.nav-bar {
-  background: rgba(0, 0, 0, 0.9);
-  width: 80%;
-  z-index: 100;
-  margin: 0 auto; }
-
-nav {
-  float: left;
-  /* Desplazamos el nav hacia la izquierda */ }
-
-nav ul {
-  list-style: none;
+.header {
   overflow: hidden;
-  /* Limpiamos errores de float */ }
+  background-color: #f1f1f1;
+  padding: 20px 10px; }
 
-nav ul li {
+.button a {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: flex-start;
+  margin-left: 137px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+  border-radius: 4px;
+  line-height: 25px;
+  background-color: dodgerblue;
+  color: white; }
+
+.button a:hover {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: flex-start;
+  margin-left: 137px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+  line-height: 25px;
+  background-color: #505050;
+  color: white; }
+
+.header a {
   float: left;
-  font-family: Arial, sans-serif;
-  font-size: 16px; }
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px; }
 
-nav ul li a {
-  display: block;
-  /* Convertimos los elementos a en elementos bloque para manipular el padding */
-  padding: 20px;
-  color: #fff;
-  text-decoration: none; }
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold; }
 
-nav ul li:hover {
-  background-color: #074085; }
+.header a:hover {
+  background-color: #ddd;
+  color: black; }
 
-.contenido {
-  padding-top: 80px; }
+.header a.active {
+  background-color: dodgerblue;
+  color: white; }
+
+.header-right {
+  float: right; }
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left; }
+  .header-right {
+    float: none; } }
