--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -1,60 +1,86 @@
-$background: #074085;
-
-/*Eliminamos los margenes y paddings que agrega el navegador por defecto*/
 * {
-  padding: 0;
-  margin: 0;
-}
- 
-/*Agregamos margenes inferiores a los parrafos*/
-p {
-  margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
-.wrapper {
-  width: 80%;
-  margin: auto;
-  overflow:hidden;
+body {
+  margin: 0auto;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-h1, h3 {
-  text-align: center;
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
 }
 
-.nav-bar {
-  background: rgba(0,0,0,0.9);
-  width: 80%;
-  // position: fixed;
-  z-index: 100;
-  margin: 0 auto;
+.button a {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: flex-start;
+  margin-left: 137px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+  border-radius: 4px;
+  line-height: 25px;
+  background-color: dodgerblue;
+  color: white;
 }
 
-nav {
-  float: left; /* Desplazamos el nav hacia la izquierda */
+.button a:hover {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: flex-start;
+  margin-left: 137px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 10px;
+
+  line-height: 25px;
+  background-color: #505050;
+  color: white;
 }
- 
-nav ul {
-  list-style: none;
-  overflow: hidden; /* Limpiamos errores de float */
-}
- 
-nav ul li {
+
+.header a {
   float: left;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-}
- 
-nav ul li a {
-  display: block; /* Convertimos los elementos a en elementos bloque para manipular el padding */
-  padding: 20px;
-  color: #fff;
+  color: black;
+  text-align: center;
+  padding: 12px;
   text-decoration: none;
-}
- 
-nav ul li:hover {
-  background-color: $background;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
 }
 
-.contenido {
-  padding-top: 80px;
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .header-right {
+    float: none;
+  }
 }
