--- a/src/css/LandingPage.scss
+++ b/src/css/LandingPage.scss
@@ -1,10 +1,10 @@
 $background: #074085;
 
 body{
-  margin: 3%;
+  
 }
 .wrapper{
-  // width: 80%;
+  width: 100%;
 }
 
 .content{
@@ -12,47 +12,9 @@ body{
   margin: 0 auto;
 }
 
-// * { 
-// 	margin: 0; 
-// 	padding: 0; 
-// }
-// body { 
-// 	font: 14px/1.4 Georgia, Serif; 
-// }
-// #page-wrap {
-// 	margin: 50px;
-// }
-// p {
-// 	margin: 20px 0; 
-// }
-
-// 	/* 
-// 	Generic Styling, for Desktops/Laptops 
-// 	*/
-// 	table { 
-// 		width: 100%; 
-// 		border-collapse: collapse; 
-// 	}
-// 	/* Zebra striping */
-// 	tr:nth-of-type(odd) { 
-// 		background: #eee; 
-// 	}
-// 	th { 
-// 		background: #333; 
-// 		color: white; 
-// 		font-weight: bold; 
-// 	}
-// 	td, th { 
-// 		padding: 6px; 
-// 		border: 1px solid #ccc; 
-// 		text-align: left; 
-//   }
-  
-//   .landing-buttons{
-//     margin: 0 auto;
-//     width: 50%;
-//     background-color: yellowgreen;
-//   }
+.center a:visited {
+  color: white;
+}
 
 h1{
   text-align: center;
