--- a/src/css/Login.scss
+++ b/src/css/Login.scss
@@ -1,8 +1,8 @@
 $background: #FFFFFF;
 
 .login{
-  width: 60%;
-  background-color:$background;
+  width: 100%;
+  // background-color:$background;
   margin: 0 auto;
 }
 
