UPDATE job-detail style

--- a/src/css/JobDetail.css
+++ b/src/css/JobDetail.css
@@ -1,8 +1,34 @@
+.wrapper-job-card {
+  width: 100%;
+  margin: 0 auto; }
+
+.card {
+  background-color: white;
+  margin: 0 auto; }
+
 .container {
-  width: 65%;
-  margin: 0 auto;
-  background-color: #F2F2F2;
-  padding: 20px; }
+  padding: 0px 15px 10px 15px;
+  margin: 0px 15px 10px 15px; }
+
+.p-justify {
+  text-align: justify; }
+
+.apply-button {
+  background-color: dodgerblue;
+  color: white; }
+
+.dateposted button {
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 5px 5px 0 0;
+  padding: 10px;
+  width: 10%;
+  margin-left: 500px;
+  border-color: dodgerblue; }
+
+ul li {
+  text-decoration: none;
+  list-style: none; }
 
 h2 {
   margin: 3px 0;
@@ -11,3 +37,19 @@ h2 {
 
 .job-item-location img {
   max-height: 12px; }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 60%;
+  border-radius: 10px;
+  padding: 30px; }
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+img {
+  border-radius: 5px 5px 0 0; }
+
+.container-job-card {
+  padding: 2px 16px; }
