--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -9,17 +9,37 @@ p {
   margin-bottom: 20px;
 }
 
-header {
-  background: rgba(0,0,0,0.9);
+.nav-bar-header {
+  background: #1D90FF;
+  color: white;
   width: 70%;
   position: fixed;
-  z-index: 100;
+}
+.wrapper-nav-bar{
+  margin: 0 auto;
 }
 
 nav {
   float: initial; /* Desplazamos el nav hacia la izquierda */
   margin: 0auto;
 }
+
+.fix-nav-bar{
+  margin: 0 auto;
+  color: white
+}
+
+.fix-nav-bar a:visited{
+  margin: 0 auto;
+  color: white
+}
+
+.fix-nav-bar a:hover{
+  background-color:white;
+  color: #1D90FF;
+}
+
+
  
 nav ul {
   list-style: none;
@@ -30,6 +50,8 @@ nav ul li {
   float: left;
   font-family: Arial, sans-serif;
   font-size: 16px;
+  width: 20%;
+  text-align: center;
 }
  
 nav ul li a {
