--- a/src/css/MyProfile.scss
+++ b/src/css/MyProfile.scss
@@ -14,6 +14,12 @@
   font-size: 18px;
 }
 
+.resumen-profile {
+  text-align: justify;
+  margin: 10px;
+  margin-bottom: 30px;
+}
+
 button {
   border: none;
   outline: 0;
