--- a/src/css/FormAddJob.css
+++ b/src/css/FormAddJob.css
@@ -2,12 +2,11 @@
   box-sizing: border-box; }
 
 form {
-  width: 40%;
+  width: 70%;
   padding: 16px;
   border-radius: 10px;
   margin: auto;
   background-color: #F8F9F9; }
-
 
 form label {
   width: 10%;
@@ -16,13 +15,12 @@ form label {
 
 form select,
 form input[type="text"],
-form input[type="password"],
 form input[type="email"] {
-  width: 100%;
+  width: 90%;
   padding: 3px 10px;
   border: 1px solid #f6f6f6;
   border-radius: 3px;
-  /* background-color: #f6f6f6; */
+  background-color: #f6f6f6;
   margin: 8px 0;
   display: inline-block; }
 
@@ -48,5 +46,4 @@ textarea {
   background-color: #f6f6f6;
   margin: 8px 0;
   resize: none;
-  display: block; 
-}
+  display: block; }
