--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,137 @@
+.alert p {
+  margin-bottom: 0 !important;
+}
 body {
+  background: #f2f2f2; /* fallback for old browsers */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, "Segoe UI", Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
+  padding: 0;
+  font-family: sans-serif;
+}
+header {
+  margin: 30px 0;
+}
+.contenido {
+  padding: 20px;
+}
+.contenido-principal {
+  background-color: white;
+  padding: 30px;
+  border-radius: 20px;
+  margin: 15px;
+}
+.presupuesto p {
+  margin-bottom: 0;
+  font-weight: bold;
+}
+.presupuesto p span {
+  font-weight: normal;
+}
+#gastos {
+  margin-bottom: 30px;
+}
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  color: #00b2bd;
+  text-align: center;
+  font-size: 4.8rem !important;
+}
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  color: #004e92;
+  margin-bottom: 30px;
+  font-size: 3rem !important;
+  text-align: center;
+}
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  color: #004e92;
+  margin-bottom: 30px;
+  font-size: 3rem !important;
+  text-align: center;
+}
+.campo {
+  margin-bottom: 2rem;
+}
+.error {
+  text-align: center;
+}
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+.alert-primary {
+  color: #004085;
+  background-color: #cce5ff;
+  border-color: #b8daff;
+}
+.alert-success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+.alert-warning {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+}
+.gastos-realizados {
+  margin-bottom: 2rem;
+}
+.gastos-realizados li {
+  list-style: none;
+  margin-bottom: 0rem;
+  border-bottom: 1px solid #e1e1e1;
+  padding: 1rem 0;
+}
+.gastos-realizados li:last-of-type {
+  margin-bottom: 0 !important;
+}
+.gastos-realizados li p {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+}
+.gastos-realizados li p .gasto {
+  background-color: #004085;
+  padding: 1rem;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.img-padre {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.img-hijo {
+  height: 100px;
+  width: 100px;
+}
+
+.img-profile{
+  max-height: 150px;
+}
+
+.img-location{
+  max-width: 40px;
+}
+
+.location-center{
+  text-align: center;
+}
+
+.button-blue{
+  background-color: blue;
+  width: 100%;
 }
